fixed minor issues

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@ border: 10px solid rgb(95, 96, 97);
 <div id="fb-root"></div>
 <script type="text/javascript" src="fbjs.js"> </script>
 <a href="javascript:FBLogin();">
-	<p>Click here to invite</p>
+	<p>Browse Facebook Photos</p>
+<a href="javascript:getSelectedPhotos()">
+	<p>Show selected photos</p>
 </a>	
+<p id="selectedPhotos"></p>
 
 	<div id="jfmps-container" style="">
 	</div> 	
